Added new program envini to read environment variables from an INI file.

Added support for adding a prefix in envdir.

Fixed sleeper to do a single atomic write.

Changes in daemontools-encore-1.10
==================================

Added support for fnmatch patterns in multilog.

Increased the multilog file size limit to 2GB.
(Thanks to SATOH Fumiyasu)

Fixed missing separator between system error texts.

Major speed ups in multilog, tai64n, and tai64nlocal.

Added support for signal propagation and disabling setsid behavior in
supervise.  (Thanks to Alan Grow)

Changes in daemontools-encore-1.06
==================================

Added options to svstat to control checking the log script service.

Added -l option to svc to explicitly control the main service.

Fixed race issuing svc commands to log and then main service.

Changed the "safely written" option for multilog to "w".

Fixed daemontools leaking the status file descriptor to its children.

Fixed svc sending commands to both the log and main service.

Changes in daemontools-encore-1.05
==================================

Added options to svup to control checking the log script service.

Eliminated some compiler warnings.

Changes in daemontools-encore-1.04
==================================

Fixed bug in svscan preventing it from starting services with a "log"
script instead of directory.

Changes in daemontools-encore-1.03
==================================

Added -s option to setuidgid to set the supplemental GIDs.
(Thanks to SATOH Fumiyasu)

Changes in daemontools-encore-1.02
==================================

If a supervise is managing both a main and log service, issuing
"svc -dx" on the service will cause the log to stop after the main
service exits.

Changes between daemontools-0.76 and daemontools-encore
=======================================================

Added support to supervise/svc for sending SIGQUIT/USR1/USR2/WINCH.
(original patch by Wayne Marshall, based on patch by Scott Gifford)